--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "web-cv",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nickxma.github.io/cv",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "predeploy": "next build && next export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@apollo/server": "^4.10.2",
@@ -19,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "gh-pages": "^6.1.1",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.23.0",
     "lucide-react": "^0.300.0",
