--- a/package.json
+++ b/package.json
@@ -44,4 +44,4 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prettier": "^3.1.1",
-    "prettier-plugin-tailwind​⬤
+    "prettier-plugin-tailwind​
