--- a/package.json
+++ b/package.json
@@ -44,4 +44,8 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prettier": "^3.1.1",
-    "prettier-plugin-tailwind​
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5"
+  }
+}
